--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <title>Mambole pizaa inn</title>
+        <link href="css/css/bootstrap.css"rel="stylesheet"type="text/css">
+        <link rell="stylesheet"type="text/css"href="css/c.css">
     </head>
-    <body>
-        
-    </body>
+<body>
+<script src="js/jquery-3.5.1.js"></script>
+<script src="js/jscript.js"></script>
+</body>
 </html>
