--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
     <head>
         <title>Mambole pizaa inn</title>
         <link href="css/css/bootstrap.css"rel="stylesheet"type="text/css">
-        <link rell="stylesheet"type="text/css"href="css/c.css">
+        <link rel="stylesheet"type="text/css"href="css/c.css">
     </head>
 <body>
+    <div class="navigation-bar">
+        <nav class="navbar navbar-expand-md">
+  <a class="navbar-brand" href="#">Mamb<span>ole</span></a>
+  <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="main-navigation">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact us</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <script src="js/jquery-3.5.1.js"></script>
 <script src="js/jscript.js"></script>
 </body>
