added a nother photo for tomato flavor

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 </div>
 <div class="col-md-4">
   <h3 class="title">chicken mushroom </h3>
-  
+  <img src="img/pizza/tomato.jpg"alt="tomato flavor">
 </div>
 </div>
 </div>
