added header title for order

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 
     <div class="col-md-12 ">
 
-      <h1>Place Orders below</h1>
+      <h5><center>PLACE YOUR ORDER<span>WE WILL DELIVER TO YOUR DOOR STEP</span></center></h5>
       <br>
       <h1 class="type">Pick Flavour</h1>
       <!--Choose  Flavours-->
