--- a/index.html
+++ b/index.html
@@ -73,12 +73,23 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 
     <div class="col-md-12 ">
 
-      <h5><center>PLACE YOUR ORDER<span>WE WILL DELIVER TO YOUR DOOR STEP</span></center></h5>
+      <h5><center>PLACE YOUR  ORDER <span>WE WILL DELIVER TO YOUR DOOR STEP</span></center></h5>
       <br>
-      <h1 class="type">Pick Flavour</h1>
+      <p class="type">Pick Flavour</p>
       <!--Choose  Flavours-->
     </div>
-      <div class="col-md-6">
+        <div class="col-md-12">
+          <select class="form-control col-md-6 one" id="flavor">
+            <option value ="Veg tikka">Veg Tikka</option>
+            <option value ="Chicken tikka">Chicken Tikka</option>
+            <option value ="Peri peri chicken">Peri Peri Chicken</option>
+            <option value ="BBQ steak">BBQ Steak</option>
+            <option value ="Boerewors">Boerewors</option>
+            <option value ="Hawaiian">Hawaiian</option>
+            <option value ="Chicken and mushroom">Chicken and Mushroom</option>
+            <option value ="Regina pizza">Regina Pizza</option>
+          </select>
+      </div>
         
    <br>
         
