--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
             <option value ="Chicken and mushroom">Chicken and Mushroom</option>
             <option value ="Regina pizza">Regina Pizza</option>
           </select>
+          <!--Option for Toppingss-->
+        <p class="type">Extra Toppings</p>
+        <select class="form-control  col-md-6 two" id="toppings">
+        <option value ="">None</option>
+        <option value ="Extra tomato">Extra Tomato</option>
+        <option value ="Extra pineapple">Extra Pinapple</option>
+
+
+        </select>
+
       </div>
         
    <br>
