--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 </div>
 </div>
 <hr>
-<div class="footer">
+<div class="order">
   
   <div class="what-we-do container-fluid">
     <div class="container txt">
@@ -78,12 +78,12 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
       <p class="type">Pick Flavour</p>
       <!--Choose  Flavours-->
     </div>
-        <div class="col-md-12">
-          <select class="form-control col-md-6 one" id="flavor">
-            <option value ="Veg tikka">Veg Tikka</option>
-            <option value ="Chicken tikka">Chicken Tikka</option>
-            <option value ="Peri peri chicken">Peri Peri Chicken</option>
-            <option value ="BBQ steak">BBQ Steak</option>
+        <div class="col-md-6">
+          <select class="form-control col-md-8 one" id="flavor">
+            <option value ="Veg tikka">VegTikka</option>
+            <option value ="Chicken tikka">ChickenTikka</option>
+            <option value ="Peri peri chicken">PeriPeriChicken</option>
+            <option value ="BBQ steak">BBQSteak</option>
             <option value ="Boerewors">Boerewors</option>
             <option value ="Hawaiian">Hawaiian</option>
             <option value ="Chicken and mushroom">Chicken and Mushroom</option>
@@ -93,15 +93,77 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
         <p class="type">Extra Toppings</p>
         <select class="form-control  col-md-6 two" id="toppings">
         <option value ="">None</option>
-        <option value ="Extra tomato">Extra Tomato</option>
-        <option value ="Extra pineapple">Extra Pinapple</option>
+        <option value ="Extra tomato">Tomato</option>
+        <option value ="Extra pineapple">Pinapple</option>
 </select>
  <!--Choose  box Size-->
- <p class="type">Pick Size</h1>
+ <p class="type">Pick Size</p>
   <select class="form-control col-md-6 three" id="size">
   <option value ="large">Large</option>
   <option value ="medium">Medium</option>
   <option value ="small">Small</option>
+  </select>
+  <!--Choose  box numbers-->
+  <p>How many boxes?</p>
+  <select class="form-control  col-md-6 four" id="quantity">
+    <option value ="1">1</option>
+    <option value ="2">2</option>
+    <option value ="3">3</option>
+    <option value ="4">4</option>
+    <option value ="5">5</option>
+    <option value ="6">6</option>
+    <option value ="7">7</option>
+    <option value ="8">8</option>
+    <option value ="9">9</option>
+    <option value ="10">10</option>
+  </select>
+  <br>
+  <div class="form-group col-md-9">
+    <button class="btn add" id="order">Place Order</button>
+ </div>
+
+ <div class="form-group col-md-9">
+     <button class="btn" id="deliver">I want a Delivery</button>
+  </div>
+</div>
+<div class="col-md-6 txt">
+<h2>Your Order Summary:</h2>
+        <!-- <ol id="payment"> </ol>
+        <ol id="payment1"> </ol>
+        <ol id="payment2"> </ol>
+        <ol id="payment3"> </ol> -->
+        <table class="table">
+        <thead class ="txt">
+          <tr>
+
+            <th scope="col">Flavor</th>
+            <th scope="col">Toppings</th>
+            <th scope="col">Size</th>
+            <th scope="col">Boxes</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody id="pizza" class="gr">
+          <tr>
+
+            <th scope="row" id="flav"></th>
+            <th id="tp"></th>
+            <th id="sz"></th>
+            <th id="bxs"></th>
+            <th id="total"></th>
+
+          </tr>
+
+
+        </tbody>
+        </table>
+
+        <h3><span>Total payable</span><ol id="total"> </ol></h3>
+
+</div>
+
+
+  <br>
 </div>
         
  
@@ -111,6 +173,9 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
   </div>
  
   </div>
+  </div>
+  <div class="page-footer">
+    hfghfgdhdghfgh
   </div>
 </div>
 
