added socila media content

--- a/index.html
+++ b/index.html
@@ -175,7 +175,15 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
   </div>
   </div>
   <div class="page-footer">
-    hfghfgdhdghfgh
+    <center>
+    Thank you for being our valued customer
+    please feel free to reach to us for an queries ,we are  here for you<br>
+    <br>
+    <img src="img/social_icons/phone.png"alt="phone">
+    <img src="img/social_icons/facebook.png"alt="facebook">
+    <img src="img/social_icons/twitter.png"alt="twitter">
+    <img src="img/social_icons/behance.png"alt="behance"><br>
+    @copyright silas sakwa 2020<br>All right reserved
   </div>
 </div>
 
