--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
         <title>Mambole pizaa inn</title>
         <link href="css/css/bootstrap.css"rel="stylesheet"type="text/css">
         <link rel="stylesheet"type="text/css"href="css/c.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
   <div class="container-fluid">
     
     <div class="navigation-bar">
         <nav class="navbar navbar-expand-md">
-  <a class="navbar-brand" href="#">Mamb<span>ole</span></a>
+  <a class="navbar-brand" href="#">Mamb<span>ole</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; :0740912099</a>
   <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,7 +44,7 @@
       <div class="col-md-4">
         <h3>VEG TIKKA</h3>
   <div class="colimg">   
-<p>You have two good reasons to smile and enjoy the Terrific Thursday offer today.
+<p>You have two good reasons to smile and enjoy the Terrific  offer today.
 1. You can enjoy your favorite Pizza with a loved one, and get another FREE.
 2. We have a new branch in town(CBD), at 680 Hotel.
 
