--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
         </table>
 
         <h3><span>Total payable</span><ol id="total"> </ol></h3>
+        <P> if you make your order and you are within within Nairobi, we will make free delivary to you upto your doorstep but, outside Nairobi we we charge  a small fee of upto ksh 200 for delivary.<br>
+        To make your order simply reach us through:<br>
+      :0740912099<br>
+      :0727511874
+    </P>
 
 </div>
  <br>
