Modified chicken flavor heading

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 </div>
 </div>
 <div class="col-md-4">
-<h3 class="title">Spicy chicken</h3>
+<h3 class="title">REGINA FLAVOUR</h3>
 <img src="img/pizza/download.jpg"alt="img1">
 </div>
 <div class="col-md-4">
-  <h3 class="title">chicken mushroom </h3>
+  <h3 class="title">CHICKEN MUSHROOM </h3>
   <img src="img/pizza/tomato.jpg"alt="tomato flavor">
 </div>
 </div>
