--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h3 class="headings"><center>OUR PRODUCTS</center></h3>
   <div class="row">
       <div class="col-md-4">
-        <h3>VEG TIKKA</h3>
+        <h3><center>VEG TIKKA</center></h3>
   <div class="colimg">   
 <p>You have two good reasons to smile and enjoy the Terrific  offer today.
 1. You can enjoy your favorite Pizza with a loved one, and get another FREE.
@@ -52,11 +52,11 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
 </div>
 </div>
 <div class="col-md-4">
-<h3 class="title">REGINA FLAVOUR</h3>
+<h3 class="title"><center>REGINA FLAVOUR</center></h3>
 <img src="img/pizza/download.jpg"alt="img1">
 </div>
 <div class="col-md-4">
-  <h3 class="title">CHICKEN MUSHROOM </h3>
+  <h3 class="title"><enter>CHICKEN MUSHROOM </enter></h3>
   <img src="img/pizza/tomato.jpg"alt="tomato flavor">
 </div>
 </div>
@@ -91,21 +91,28 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
           </select>
           <!--Option for Toppingss-->
         <p class="type">Extra Toppings</p>
-        <select class="form-control  col-md-6 two" id="toppings">
+        <select class="form-control  col-md-8 two" id="toppings">
         <option value ="">None</option>
         <option value ="Extra tomato">Tomato</option>
         <option value ="Extra pineapple">Pinapple</option>
 </select>
+ <!--Choose  crust-->
+ <p class="type">Pick Size</p>
+  <select class="form-control col-md-8 three" id="crust">
+  <option value ="cripsy">Cripsy</option>
+  <option value ="stuffed">stuffed</option>
+  <option value ="gluten-free">gluten free</option>
+  </select>
  <!--Choose  box Size-->
  <p class="type">Pick Size</p>
-  <select class="form-control col-md-6 three" id="size">
+  <select class="form-control col-md-8 three" id="size">
   <option value ="large">Large</option>
   <option value ="medium">Medium</option>
   <option value ="small">Small</option>
   </select>
   <!--Choose  box numbers-->
   <p>How many boxes?</p>
-  <select class="form-control  col-md-6 four" id="quantity">
+  <select class="form-control  col-md-8 four" id="quantity">
     <option value ="1">1</option>
     <option value ="2">2</option>
     <option value ="3">3</option>
