--- a/index.html
+++ b/index.html
@@ -92,28 +92,31 @@ So pop by the new 680 Hotel Pizza Inn branch na uwakilishe the start of a long w
           <!--Option for Toppingss-->
         <p class="type">Extra Toppings</p>
         <select class="form-control  col-md-8 two" id="toppings">
-        <option value ="">None</option>
-        <option value ="tomato">Tomato</option>
-        <option value =" pineapple">Pinapple</option>
+        <option value ="none">None</option>
+        <option value ="t">Tomato</option>
+        <option value ="p">Pineapple</option>
+        
 </select>
  <!--Choose  crust-->
- <p class="type">Pick crust</p>
-  <select class="form-control col-md-8 three" id="crust">
-  <option value ="none">None</option>
-  <option value ="cripsy">Cripsy</option>
-  <option value ="stuffed">stuffed</option>
-  <option value ="gluten-free">gluten free</option>
-  </select>
+ <p class="type">Select crust</p>
+ <select class="form-control col-md-8 three"id="crust">
+   
+   <option value="cripsy">Cripsy</option>
+   <option value="stuffed">stuffed</option>
+   <option value="gluten-free">gluten-free</option>
+
+ </select>
+ 
  <!--Choose  box Size-->
  <p class="type">Pick Size</p>
-  <select class="form-control col-md-8 three" id="size">
+  <select class="form-control col-md-8 four" id="size">
   <option value ="large">Large</option>
   <option value ="medium">Medium</option>
   <option value ="small">Small</option>
   </select>
   <!--Choose  box numbers-->
   <p>How many boxes?</p>
-  <select class="form-control  col-md-8 four" id="quantity">
+  <select class="form-control  col-md-8 five" id="quantity">
     <option value ="1">1</option>
     <option value ="2">2</option>
     <option value ="3">3</option>
